@@ -14,7 +14,7 @@ import eu.lostname.lostproxy.LostProxy;
 import eu.lostname.lostproxy.builder.MessageBuilder;
 import eu.lostname.lostproxy.interfaces.IFriendData;
 import eu.lostname.lostproxy.interfaces.IPlayer;
-import eu.lostname.lostproxy.utils.Prefix;
+import eu.lostname.lostproxy.utils.$;
 import net.md_5.bungee.api.CommandSender;
 import net.md_5.bungee.api.ProxyServer;
 import net.md_5.bungee.api.chat.ClickEvent;
@@ -43,7 +43,7 @@ public class FriendCommand extends Command {
             IPlayer iPlayer = new IPlayer(player.getUniqueId());
 
             if (strings.length == 0) {
-                player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Benutzung von §a/friend§8:").build());
+                player.sendMessage(new MessageBuilder($.FRIENDS + "Benutzung von §a/friend§8:").build());
                 player.sendMessage(new MessageBuilder("§8┃ §a/friend 2 §8» §7Zeigt Hilfeseite 2").addClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/friend 2").addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8[§aKlick§8]").build());
                 player.sendMessage(new MessageBuilder("§8┃ §a/friend add <Spieler> §8» §7Fügt jemanden als Freund hinzu").addClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/friend add ").addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8[§aKlick§8]").build());
                 player.sendMessage(new MessageBuilder("§8┃ §a/friend remove <Spieler> §8» §7Entfernt jemanden als Freund").addClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/friend remove ").addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8[§aKlick§8]").build());
@@ -55,7 +55,7 @@ public class FriendCommand extends Command {
             } else if (strings.length == 1) {
                 switch (strings[0]) {
                     case "2":
-                        player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Hilfeseite 2§8:").build());
+                        player.sendMessage(new MessageBuilder($.FRIENDS + "Hilfeseite 2§8:").build());
                         player.sendMessage(new MessageBuilder("§8┃ §a/friend acceptall §8» §7Nimmt alle Freundschaftsanfragen an").addClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/friend acceptall").addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8[§aKlick§8]").build());
                         player.sendMessage(new MessageBuilder("§8┃ §a/friend denyall §8» §7Lehnt alle Freundschaftsanfragen ab").addClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/friend denyall").addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8[§aKlick§8]").build());
                         player.sendMessage(new MessageBuilder("§8┃ §a/friend broadcast [Nachricht] §8» §7Schicke eine Nachricht an alle Freunde").addClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/friend broadcast ").addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8[§aKlick§8]").build());
@@ -70,16 +70,16 @@ public class FriendCommand extends Command {
                         player.sendMessage(new MessageBuilder("§8§m--------------------§r").build());
                         break;
                     case "list":
-                        if (iFriendData.getFriends().size() > 0) {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Deine Freundesliste §8(§e" + iFriendData.getFriends().size() + "§8):").build());
-                            List<String> onlineFriends = iFriendData.getFriends().keySet().stream().filter(filter -> new IPlayer(UUID.fromString(filter)).isOnline()).filter(filter -> LostProxy.getInstance().getFriendManager().getFriendData(UUID.fromString(filter)).canFriendsSeeOnlineStatusAllowed()).collect(Collectors.toList());
-                            List<String> offlineFriends = iFriendData.getFriends().keySet().stream().filter(filter -> !new IPlayer(UUID.fromString(filter)).isOnline() || !LostProxy.getInstance().getFriendManager().getFriendData(UUID.fromString(filter)).canFriendsSeeOnlineStatusAllowed()).collect(Collectors.toList());
+                        if (!iFriendData.getFriends().isEmpty()) {
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Deine Freundesliste §8(§e" + iFriendData.getFriends().size() + "§8):").build());
+                            List<String> onlineFriends = iFriendData.getFriends().keySet().stream().filter(filter -> new IPlayer(UUID.fromString(filter)).isOnline()).filter(filter -> LostProxy.getInstance().getFriendManager().getFriendData(UUID.fromString(filter)).canFriendsSeeOnlineStatusAllowed()).toList();
+                            List<String> offlineFriends = iFriendData.getFriends().keySet().stream().filter(filter -> !new IPlayer(UUID.fromString(filter)).isOnline() || !LostProxy.getInstance().getFriendManager().getFriendData(UUID.fromString(filter)).canFriendsSeeOnlineStatusAllowed()).toList();
 
                             onlineFriends.forEach(online -> {
                                 IPlayer friendiPlayer = new IPlayer(UUID.fromString(online));
 
-                                TextComponent playerNameComponent = new MessageBuilder("§8┃ " + friendiPlayer.getColorWithPlayername() + " §8» ").build();
-                                TextComponent serverComponent = new MessageBuilder("§e§n" + friendiPlayer.getICloudPlayer().getConnectedService().getServerName()).addClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/friend jump " + friendiPlayer.getPlayerName()).addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8» §eKlicke§8, §7um " + friendiPlayer.getColorWithPlayername() + " §7nachzuspringen§8.").build();
+                                TextComponent playerNameComponent = new MessageBuilder("§8┃ " + friendiPlayer.getDisplaywithPlayername() + " §8» ").build();
+                                TextComponent serverComponent = new MessageBuilder("§e§n" + friendiPlayer.getCloudPlayer().connectedService().serverName()).addClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/friend jump " + friendiPlayer.getPlayerName()).addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8» §eKlicke§8, §7um " + friendiPlayer.getDisplaywithPlayername() + " §7nachzuspringen.").build();
                                 playerNameComponent.addExtra(serverComponent);
 
                                 player.sendMessage(playerNameComponent);
@@ -89,11 +89,11 @@ public class FriendCommand extends Command {
                                 IPlayer friendiPlayer = new IPlayer(UUID.fromString(offline));
                                 IFriendData friendData = LostProxy.getInstance().getFriendManager().getFriendData(friendiPlayer.getUniqueId());
 
-                                TextComponent playerNameComponent = new MessageBuilder("§8┃ " + friendiPlayer.getColorWithPlayername() + " §8» ").build();
+                                TextComponent playerNameComponent = new MessageBuilder("§8┃ " + friendiPlayer.getDisplaywithPlayername() + " §8» ").build();
                                 TextComponent extraComponent;
 
                                 if (friendData.canFriendsSeeOnlineStatusAllowed()) {
-                                    extraComponent = new MessageBuilder("§7zul§8. §7online am §e" + new SimpleDateFormat("dd.MM.yyyy").format(friendData.getLastLogoutTimestamp()) + " §7um §e" + new SimpleDateFormat("HH:mm:ss").format(friendData.getLastLogoutTimestamp()) + " §7Uhr").build();
+                                    extraComponent = new MessageBuilder("§7zul. §7online am §e" + new SimpleDateFormat("dd.MM.yyyy").format(friendData.getLastLogoutTimestamp()) + " §7um §e" + new SimpleDateFormat("HH:mm:ss").format(friendData.getLastLogoutTimestamp()) + " §7Uhr").build();
                                 } else {
                                     extraComponent = new MessageBuilder("§7Onlinestatus verborgen").build();
                                 }
@@ -103,19 +103,19 @@ public class FriendCommand extends Command {
                             });
 
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Deine Freundesliste ist §cleer§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Deine Freundesliste ist §cleer§7.").build());
                         }
                         break;
                     case "requests":
-                        if (iFriendData.getRequests().size() > 0) {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Freundschaftsanfragen §8(§e" + iFriendData.getRequests().size() + "§8):").build());
+                        if (!iFriendData.getRequests().isEmpty()) {
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Freundschaftsanfragen §8(§e" + iFriendData.getRequests().size() + "§8):").build());
                             iFriendData.getRequests().keySet().forEach(all -> {
                                 IPlayer friendiPlayer = new IPlayer(UUID.fromString(all));
 
-                                TextComponent playerNameComponent = new MessageBuilder("§8┃ " + friendiPlayer.getColorWithPlayername() + " §8» ").build();
-                                TextComponent acceptComponent = new MessageBuilder("§a§l✔").addClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/friend accept " + friendiPlayer.getPlayerName()).addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8» §eKlicke§8, §7um diese Freundschaftsanfrage §aanzunehmen§8.").build();
+                                TextComponent playerNameComponent = new MessageBuilder("§8┃ " + friendiPlayer.getDisplaywithPlayername() + " §8» ").build();
+                                TextComponent acceptComponent = new MessageBuilder("§a§l✔").addClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/friend accept " + friendiPlayer.getPlayerName()).addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8» §eKlicke§8, §7um diese Freundschaftsanfrage §aanzunehmen§7.").build();
                                 TextComponent seperateComponent = new MessageBuilder(" §8┃ ").build();
-                                TextComponent denyComponent = new MessageBuilder("§c§l✖").addClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/friend deny " + friendiPlayer.getPlayerName()).addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8» §eKlicke§8, §7um diese Freundschaftsanfrage §cabzulehnen§8.").build();
+                                TextComponent denyComponent = new MessageBuilder("§c§l✖").addClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/friend deny " + friendiPlayer.getPlayerName()).addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8» §eKlicke§8, §7um diese Freundschaftsanfrage §cabzulehnen§7.").build();
 
                                 playerNameComponent.addExtra(acceptComponent);
                                 playerNameComponent.addExtra(seperateComponent);
@@ -124,11 +124,11 @@ public class FriendCommand extends Command {
                                 player.sendMessage(playerNameComponent);
                             });
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du hast §ckeine §7Freundschaftsanfragen erhalten§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Du hast §ckeine §7Freundschaftsanfragen erhalten.").build());
                         }
                         break;
                     case "acceptall":
-                        if (iFriendData.getRequests().size() > 0) {
+                        if (!iFriendData.getRequests().isEmpty()) {
                             iFriendData.getRequests().keySet().forEach(request -> {
                                 IPlayer requestIPlayer = new IPlayer(UUID.fromString(request));
 
@@ -139,33 +139,33 @@ public class FriendCommand extends Command {
                                 requestIFriendData.addFriend(player.getUniqueId());
                                 requestIFriendData.save();
 
-                                player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du bist nun mit " + requestIPlayer.getColorWithPlayername() + " §7befreundet§8.").build());
+                                player.sendMessage(new MessageBuilder($.FRIENDS + "Du bist nun mit " + requestIPlayer.getDisplaywithPlayername() + " §7befreundet.").build());
 
                                 if (requestIPlayer.isOnline()) {
                                     ProxiedPlayer requestPlayer = ProxyServer.getInstance().getPlayer(requestIPlayer.getUniqueId());
-                                    requestPlayer.sendMessage(new MessageBuilder(Prefix.FRIENDS + iPlayer.getColorWithPlayername() + " §7hat deine Freundschaftsanfrage §aakzeptiert§8.").build());
+                                    requestPlayer.sendMessage(new MessageBuilder($.FRIENDS + iPlayer.getDisplaywithPlayername() + " §7hat deine Freundschaftsanfrage §aakzeptiert§7.").build());
                                 }
                             });
                             iFriendData.getRequests().clear();
                             iFriendData.save();
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du hast §ckeine §7Freundschaftsanfragen erhalten§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Du hast §ckeine §7Freundschaftsanfragen erhalten§7.").build());
                         }
                         break;
                     case "denyall":
-                        if (iFriendData.getRequests().size() > 0) {
+                        if (!iFriendData.getRequests().isEmpty()) {
                             iFriendData.getRequests().keySet().forEach(request -> {
                                 IPlayer requestIPlayer = new IPlayer(UUID.fromString(request));
 
-                                player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du hast die Freundschaftsanfrage von " + requestIPlayer.getColorWithPlayername() + " §cabgelehnt§8.").build());
+                                player.sendMessage(new MessageBuilder($.FRIENDS + "Du hast die Freundschaftsanfrage von " + requestIPlayer.getDisplaywithPlayername() + " §cabgelehnt§7.").build());
 
                                 if (requestIPlayer.isOnline())
-                                    ProxyServer.getInstance().getPlayer(requestIPlayer.getUniqueId()).sendMessage(new MessageBuilder(Prefix.FRIENDS + iPlayer.getColorWithPlayername() + " §7hat deine Freundschaftsanfrage §cabgelehnt§8.").build());
+                                    ProxyServer.getInstance().getPlayer(requestIPlayer.getUniqueId()).sendMessage(new MessageBuilder($.FRIENDS + iPlayer.getDisplaywithPlayername() + " §7hat deine Freundschaftsanfrage §cabgelehnt§7.").build());
                             });
                             iFriendData.getRequests().clear();
                             iFriendData.save();
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du hast §ckeine §7Freundschaftsanfragen §7erhalten§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Du hast §ckeine §7Freundschaftsanfragen §7erhalten§7.").build());
                         }
                         break;
                     case "toggle":
@@ -173,9 +173,9 @@ public class FriendCommand extends Command {
                         iFriendData.save();
 
                         if (iFriendData.canFriendsSeeOnlineStatusAllowed()) {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du erhältst nun §awieder §7Freundschaftsanfragen§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Du erhältst nun §awieder §7Freundschaftsanfragen§7.").build());
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du erhältst nun §ckeine §7Freundschaftsanfragen mehr§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Du erhältst nun §ckeine §7Freundschaftsanfragen mehr§7.").build());
                         }
                         break;
                     case "togglenotify":
@@ -183,9 +183,9 @@ public class FriendCommand extends Command {
                         iFriendData.save();
 
                         if (iFriendData.areNotifyMessagesEnabled()) {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du erhältst nun §awieder §7Benachrichtigungen§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Du erhältst nun §awieder §7Benachrichtigungen§7.").build());
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du erhältst nun §ckeine §7Benachrichtigungen mehr§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Du erhältst nun §ckeine §7Benachrichtigungen mehr§7.").build());
                         }
                         break;
                     case "togglemsg":
@@ -193,9 +193,9 @@ public class FriendCommand extends Command {
                         iFriendData.save();
 
                         if (iFriendData.canFriendsSentMessages()) {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Freunde können dir nun wieder §eNachrichten §7schreiben§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Freunde können dir nun wieder §eNachrichten §7schreiben§7.").build());
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Freunde können dir nun §ckeine §eNachrichten §7mehr schreiben§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Freunde können dir nun §ckeine §eNachrichten §7mehr schreiben§7.").build());
                         }
                         break;
                     case "togglejump":
@@ -203,9 +203,9 @@ public class FriendCommand extends Command {
                         iFriendData.save();
 
                         if (iFriendData.isFriendJumpAllowed()) {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Freunde können dir nun §awieder §7hinterher springen§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Freunde können dir nun §awieder §7hinterher springen§7.").build());
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Freunde können dir nun §cnicht §7mehr hinterher springen§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Freunde können dir nun §cnicht §7mehr hinterher springen§7.").build());
                         }
                         break;
                     case "toggleonline":
@@ -213,9 +213,9 @@ public class FriendCommand extends Command {
                         iFriendData.save();
 
                         if (iFriendData.canFriendsSeeOnlineStatusAllowed()) {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Freunde sehen deinen Onlinestatus nun §awieder§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Freunde sehen deinen Onlinestatus nun §awieder§7.").build());
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Freunde sehen deinen Onlinestatus §cnicht §7mehr§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Freunde sehen deinen Onlinestatus §cnicht §7mehr§7.").build());
                         }
                         break;
                     case "clear":
@@ -226,17 +226,17 @@ public class FriendCommand extends Command {
                             friendData.removeFriend(player.getUniqueId());
                             friendData.save();
 
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Die Freundschaft mit " + friendIPlayer.getColorWithPlayername() + " §7wurde §caufgelöst§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Die Freundschaft mit " + friendIPlayer.getDisplaywithPlayername() + " §7wurde §caufgelöst§7.").build());
 
                             if (friendIPlayer.isOnline())
-                                ProxyServer.getInstance().getPlayer(friendIPlayer.getUniqueId()).sendMessage(new MessageBuilder(Prefix.FRIENDS + iPlayer.getColorWithPlayername() + " §7hat die Freundschaft §caufgelöst§8.").build());
+                                ProxyServer.getInstance().getPlayer(friendIPlayer.getUniqueId()).sendMessage(new MessageBuilder($.FRIENDS + iPlayer.getDisplaywithPlayername() + " §7hat die Freundschaft §caufgelöst§7.").build());
                         });
                         iFriendData.getFriends().clear();
                         iFriendData.save();
                     case "party":
-                        player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Diese Funktion folgt bald").build());
+                        player.sendMessage(new MessageBuilder($.FRIENDS + "Diese Funktion folgt bald").build());
                     default:
-                        player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Bitte beachte die §eBenutzung §7dieses Kommandos§8.").build());
+                        player.sendMessage(new MessageBuilder($.FRIENDS + "Bitte beachte die §eBenutzung §7dieses Kommandos§7.").build());
                 }
             } else if (strings.length == 2) {
                 String argument = strings[1];
@@ -253,13 +253,13 @@ public class FriendCommand extends Command {
                                             targetFriendData.addRequest(player.getUniqueId());
                                             targetFriendData.save();
 
-                                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du hast " + targetIPlayer.getColorWithPlayername() + " §7eine §eFreundschaftsanfrage §7gesendet§8.").build());
+                                            player.sendMessage(new MessageBuilder($.FRIENDS + "Du hast " + targetIPlayer.getDisplaywithPlayername() + " §7eine §eFreundschaftsanfrage §7gesendet§7.").build());
 
                                             if (targetIPlayer.isOnline()) {
-                                                TextComponent informationComponent = new MessageBuilder(Prefix.FRIENDS + iPlayer.getColorWithPlayername() + " §7hat dir eine Freundschaftsanfrage gesendet§8. ").build();
-                                                TextComponent acceptComponent = new MessageBuilder("§a§l✔").addClickEvent(ClickEvent.Action.RUN_COMMAND, "/friend accept " + player.getName()).addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8» §eKlicke§8, §7um diese Freundschaftsanfrage §aanzunehmen§8.").build();
+                                                TextComponent informationComponent = new MessageBuilder($.FRIENDS + iPlayer.getDisplaywithPlayername() + " §7hat dir eine Freundschaftsanfrage gesendet§7. ").build();
+                                                TextComponent acceptComponent = new MessageBuilder("§a§l✔").addClickEvent(ClickEvent.Action.RUN_COMMAND, "/friend accept " + player.getName()).addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8» §eKlicke§8, §7um diese Freundschaftsanfrage §aanzunehmen§7.").build();
                                                 TextComponent seperateComponent = new MessageBuilder(" §8┃ ").build();
-                                                TextComponent denyComponent = new MessageBuilder("§c§l✖").addClickEvent(ClickEvent.Action.RUN_COMMAND, "/friend deny " + player.getName()).addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8» §eKlicke§8, §7um diese Freundschaftsanfrage §cabzulehnen§8.").build();
+                                                TextComponent denyComponent = new MessageBuilder("§c§l✖").addClickEvent(ClickEvent.Action.RUN_COMMAND, "/friend deny " + player.getName()).addHoverEvent(HoverEvent.Action.SHOW_TEXT, "§8» §eKlicke§8, §7um diese Freundschaftsanfrage §cabzulehnen§7.").build();
 
                                                 informationComponent.addExtra(acceptComponent);
                                                 informationComponent.addExtra(seperateComponent);
@@ -268,19 +268,19 @@ public class FriendCommand extends Command {
                                                 ProxyServer.getInstance().getPlayer(targetUUID).sendMessage(informationComponent);
                                             }
                                         } else {
-                                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + targetIPlayer.getColorWithPlayername() + " §7hat Freundschaftsanfragen §cdeaktiviert§8.").build());
+                                            player.sendMessage(new MessageBuilder($.FRIENDS + targetIPlayer.getDisplaywithPlayername() + " §7hat Freundschaftsanfragen §cdeaktiviert§7.").build());
                                         }
                                     } else {
-                                        player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du hast " + targetIPlayer.getColorWithPlayername() + " §7bereits eine Freundschaftsanfrage gesendet§8.").build());
+                                        player.sendMessage(new MessageBuilder($.FRIENDS + "Du hast " + targetIPlayer.getDisplaywithPlayername() + " §7bereits eine Freundschaftsanfrage gesendet§7.").build());
                                     }
                                 } else {
-                                    player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du bist §cbereits §7mit " + targetIPlayer.getColorWithPlayername() + " §7befreundet§8.").build());
+                                    player.sendMessage(new MessageBuilder($.FRIENDS + "Du bist §cbereits §7mit " + targetIPlayer.getDisplaywithPlayername() + " §7befreundet§7.").build());
                                 }
                             } else {
-                                player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Der angegebene Spieler wurde §cnicht §7gefunden§8.").build());
+                                player.sendMessage(new MessageBuilder($.FRIENDS + "Der angegebene Spieler wurde §cnicht §7gefunden§7.").build());
                             }
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du kannst §cnicht §7mit dir selbst befreundet sein§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Du kannst §cnicht §7mit dir selbst befreundet sein§7.").build());
                         }
                         break;
                     case "remove":
@@ -295,16 +295,16 @@ public class FriendCommand extends Command {
                                     iFriendData.removeFriend(targetUUID);
                                     iFriendData.save();
 
-                                    player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Die Freundschaft mit " + targetIPlayer.getColorWithPlayername() + " wurde §caufgelöst§8.").build());
+                                    player.sendMessage(new MessageBuilder($.FRIENDS + "Die Freundschaft mit " + targetIPlayer.getDisplaywithPlayername() + " wurde §caufgelöst§7.").build());
 
                                     if (targetIPlayer.isOnline()) {
-                                        ProxyServer.getInstance().getPlayer(targetUUID).sendMessage(new MessageBuilder(Prefix.FRIENDS + "Die Freundschaft mit " + iPlayer.getColorWithPlayername() + " §7wurde §caufgelöst§8.").build());
+                                        ProxyServer.getInstance().getPlayer(targetUUID).sendMessage(new MessageBuilder($.FRIENDS + "Die Freundschaft mit " + iPlayer.getDisplaywithPlayername() + " §7wurde §caufgelöst§7.").build());
                                     }
                                 } else {
-                                    player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du bist §cnicht §7mit " + targetIPlayer.getColorWithPlayername() + " §7befreundet§8.").build());
+                                    player.sendMessage(new MessageBuilder($.FRIENDS + "Du bist §cnicht §7mit " + targetIPlayer.getDisplaywithPlayername() + " §7befreundet§7.").build());
                                 }
                             } else {
-                                player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Der angegebene Spieler wurde §cnicht §7gefunden§8.").build());
+                                player.sendMessage(new MessageBuilder($.FRIENDS + "Der angegebene Spieler wurde §cnicht §7gefunden§7.").build());
                             }
                         }
                         break;
@@ -316,19 +316,19 @@ public class FriendCommand extends Command {
                                 iFriendData.addFriend(targetUUID);
                                 iFriendData.save();
 
-                                player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du bist nun mit " + targetIPlayer.getColorWithPlayername() + " §7befreundet§8.").build());
+                                player.sendMessage(new MessageBuilder($.FRIENDS + "Du bist nun mit " + targetIPlayer.getDisplaywithPlayername() + " §7befreundet§7.").build());
 
                                 IFriendData targetIFriendData = LostProxy.getInstance().getFriendManager().getFriendData(targetUUID);
                                 targetIFriendData.addFriend(player.getUniqueId());
                                 targetIFriendData.save();
 
                                 if (targetIPlayer.isOnline())
-                                    ProxyServer.getInstance().getPlayer(targetUUID).sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du bist nun mit " + iPlayer.getColorWithPlayername() + " §7befreundet§8.").build());
+                                    ProxyServer.getInstance().getPlayer(targetUUID).sendMessage(new MessageBuilder($.FRIENDS + "Du bist nun mit " + iPlayer.getDisplaywithPlayername() + " §7befreundet§7.").build());
                             } else {
-                                player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du hast §ckeine §7Freundschaftsanfrage von " + targetIPlayer.getColorWithPlayername() + " §7erhalten§8.").build());
+                                player.sendMessage(new MessageBuilder($.FRIENDS + "Du hast §ckeine §7Freundschaftsanfrage von " + targetIPlayer.getDisplaywithPlayername() + " §7erhalten§7.").build());
                             }
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Der angegebene Spieler wurde §cnicht §7gefunden§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Der angegebene Spieler wurde §cnicht §7gefunden§7.").build());
                         }
                         break;
                     case "deny":
@@ -339,15 +339,15 @@ public class FriendCommand extends Command {
                                 iFriendData.removeRequest(targetUUID);
                                 iFriendData.save();
 
-                                player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du hast die Freundschaftsanfrage von " + targetIPlayer.getColorWithPlayername() + " §cabgelehnt§8.").build());
+                                player.sendMessage(new MessageBuilder($.FRIENDS + "Du hast die Freundschaftsanfrage von " + targetIPlayer.getDisplaywithPlayername() + " §cabgelehnt§7.").build());
 
                                 if (targetIPlayer.isOnline())
-                                    ProxyServer.getInstance().getPlayer(targetUUID).sendMessage(new MessageBuilder(Prefix.FRIENDS + iPlayer.getColorWithPlayername() + " §7hat deine Freundschaftsanfrage §cabgelehnt§8.").build());
+                                    ProxyServer.getInstance().getPlayer(targetUUID).sendMessage(new MessageBuilder($.FRIENDS + iPlayer.getDisplaywithPlayername() + " §7hat deine Freundschaftsanfrage §cabgelehnt§7.").build());
                             } else {
-                                player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du hast §ckeine §7Freundschaftsanfrage von " + targetIPlayer.getColorWithPlayername() + " §7bekommen§8.").build());
+                                player.sendMessage(new MessageBuilder($.FRIENDS + "Du hast §ckeine §7Freundschaftsanfrage von " + targetIPlayer.getDisplaywithPlayername() + " §7bekommen§7.").build());
                             }
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Der angegebene Spieler wurde §cnicht §7gefunden§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Der angegebene Spieler wurde §cnicht §7gefunden§7.").build());
                         }
                         break;
                     case "jump":
@@ -362,67 +362,67 @@ public class FriendCommand extends Command {
                                         ServerInfo targetServer = ProxyServer.getInstance().getPlayer(targetUUID).getServer().getInfo();
 
                                         if (!targetServer.getName().equalsIgnoreCase(player.getServer().getInfo().getName())) {
-                                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du wirst nun mit dem Server von " + targetIPlayer.getColorWithPlayername() + " §7verbunden§8.").build());
+                                            player.sendMessage(new MessageBuilder($.FRIENDS + "Du wirst nun mit dem Server von " + targetIPlayer.getDisplaywithPlayername() + " §7verbunden§7.").build());
                                             player.connect(targetServer);
 
                                             if (targetIFriendData.areNotifyMessagesEnabled())
-                                                ProxyServer.getInstance().getPlayer(targetUUID).sendMessage(new MessageBuilder(Prefix.FRIENDS + iPlayer.getColorWithPlayername() + " §7ist zu dir §egesprungen§8.").build());
+                                                ProxyServer.getInstance().getPlayer(targetUUID).sendMessage(new MessageBuilder($.FRIENDS + iPlayer.getDisplaywithPlayername() + " §7ist zu dir §egesprungen§7.").build());
                                         } else {
-                                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du befindest dich §cbereits §7auf dem Server von " + targetIPlayer.getColorWithPlayername() + "§8.").build());
+                                            player.sendMessage(new MessageBuilder($.FRIENDS + "Du befindest dich §cbereits §7auf dem Server von " + targetIPlayer.getDisplaywithPlayername() + "§7.").build());
                                         }
                                     } else {
-                                        player.sendMessage(new MessageBuilder(Prefix.FRIENDS + targetIPlayer.getColorWithPlayername() + " §7ist §cnicht §7online§8.").build());
+                                        player.sendMessage(new MessageBuilder($.FRIENDS + targetIPlayer.getDisplaywithPlayername() + " §7ist §cnicht §7online§7.").build());
                                     }
                                 } else {
-                                    player.sendMessage(new MessageBuilder(Prefix.FRIENDS + targetIPlayer.getColorWithPlayername() + " §7hat das Nachspringen §cdeaktiviert§8.").build());
+                                    player.sendMessage(new MessageBuilder($.FRIENDS + targetIPlayer.getDisplaywithPlayername() + " §7hat das Nachspringen §cdeaktiviert§7.").build());
                                 }
                             } else {
-                                player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du bist §cnicht §7mit " + targetIPlayer.getColorWithPlayername() + " §7befreundet§8.").build());
+                                player.sendMessage(new MessageBuilder($.FRIENDS + "Du bist §cnicht §7mit " + targetIPlayer.getDisplaywithPlayername() + " §7befreundet§7.").build());
                             }
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Der angegebene Spieler wurde §cnicht §7gefunden§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Der angegebene Spieler wurde §cnicht §7gefunden§7.").build());
                         }
                         break;
                     case "broadcast":
-                        List<String> sortedFriends = iFriendData.getFriends().keySet().stream().filter(filter -> new IPlayer(UUID.fromString(filter)).isOnline() && LostProxy.getInstance().getFriendManager().getFriendData(UUID.fromString(filter)).canFriendsSentMessages()).collect(Collectors.toList());
+                        List<String> sortedFriends = iFriendData.getFriends().keySet().stream().filter(filter -> new IPlayer(UUID.fromString(filter)).isOnline() && LostProxy.getInstance().getFriendManager().getFriendData(UUID.fromString(filter)).canFriendsSentMessages()).toList();
 
-                        if (sortedFriends.size() > 0) {
+                        if (!sortedFriends.isEmpty()) {
                             sortedFriends.forEach(sortedFriend -> {
                                 UUID sortedFriendUUID = UUID.fromString(sortedFriend);
                                 IPlayer sortedFriendIPlayer = new IPlayer(sortedFriendUUID);
-                                ProxyServer.getInstance().getPlayer(sortedFriendUUID).sendMessage(new MessageBuilder(Prefix.FRIENDS + iPlayer.getColorWithPlayername() + " §8➡ " + sortedFriendIPlayer.getColorWithPlayername() + " §8» §e" + argument).build());
+                                ProxyServer.getInstance().getPlayer(sortedFriendUUID).sendMessage(new MessageBuilder($.FRIENDS + iPlayer.getDisplaywithPlayername() + " §8➡ " + sortedFriendIPlayer.getDisplaywithPlayername() + " §8» §e" + argument).build());
                             });
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Deine Nachricht wurde an §e" + sortedFriends.size() + " Freunde §7versendet§8.").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Deine Nachricht wurde an §e" + sortedFriends.size() + " Freunde §7versendet§7.").build());
                         } else {
-                            player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Deine Nachricht konnte §cnicht §7zugestellt werden§8. §7Sind vielleicht keine Freunde online oder haben die Freunde, die online sind, Nachrichten ausgeschaltet§8?").build());
+                            player.sendMessage(new MessageBuilder($.FRIENDS + "Deine Nachricht konnte §cnicht §7zugestellt werden§7. §7Sind vielleicht keine Freunde online oder haben die Freunde, die online sind, Nachrichten ausgeschaltet§8?").build());
                         }
                         break;
                     default:
-                        player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Bitte beachte die §eBenutzung §7dieses Kommandos§8.").build());
+                        player.sendMessage(new MessageBuilder($.FRIENDS + "Bitte beachte die §eBenutzung §7dieses Kommandos§7.").build());
                         break;
                 }
             } else {
                 if (strings[0].equalsIgnoreCase("broadcast")) {
-                    List<String> sortedFriends = iFriendData.getFriends().keySet().stream().filter(filter -> new IPlayer(UUID.fromString(filter)).isOnline() && LostProxy.getInstance().getFriendManager().getFriendData(UUID.fromString(filter)).canFriendsSentMessages()).collect(Collectors.toList());
+                    List<String> sortedFriends = iFriendData.getFriends().keySet().stream().filter(filter -> new IPlayer(UUID.fromString(filter)).isOnline() && LostProxy.getInstance().getFriendManager().getFriendData(UUID.fromString(filter)).canFriendsSentMessages()).toList();
 
-                    if (sortedFriends.size() > 0) {
+                    if (!sortedFriends.isEmpty()) {
                         String message = LostProxy.getInstance().formatArrayToString(1, strings);
 
                         sortedFriends.forEach(sortedFriend -> {
                             UUID sortedFriendUUID = UUID.fromString(sortedFriend);
                             IPlayer sortedFriendIPlayer = new IPlayer(sortedFriendUUID);
-                            ProxyServer.getInstance().getPlayer(sortedFriendUUID).sendMessage(new MessageBuilder(Prefix.FRIENDS + iPlayer.getColorWithPlayername() + " §8➡ " + sortedFriendIPlayer.getColorWithPlayername() + " §8» §e" + message).build());
+                            ProxyServer.getInstance().getPlayer(sortedFriendUUID).sendMessage(new MessageBuilder($.FRIENDS + iPlayer.getDisplaywithPlayername() + " §8➡ " + sortedFriendIPlayer.getDisplaywithPlayername() + " §8» §e" + message).build());
                         });
-                        player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Deine Nachricht wurde an §e" + sortedFriends.size() + " Freunde §7versendet§8.").build());
+                        player.sendMessage(new MessageBuilder($.FRIENDS + "Deine Nachricht wurde an §e" + sortedFriends.size() + " Freunde §7versendet§7.").build());
                     } else {
-                        player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Deine Nachricht konnte §cnicht §7zugestellt werden§8. §7Sind vielleicht keine Freunde online oder haben die Freunde, die online sind, Nachrichten ausgeschaltet§8?").build());
+                        player.sendMessage(new MessageBuilder($.FRIENDS + "Deine Nachricht konnte §cnicht §7zugestellt werden§7. §7Sind vielleicht keine Freunde online oder haben die Freunde, die online sind, Nachrichten ausgeschaltet§8?").build());
                     }
                 } else {
-                    player.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Bitte beachte die §eBenutzung §7dieses Kommandos§8.").build());
+                    player.sendMessage(new MessageBuilder($.FRIENDS + "Bitte beachte die §eBenutzung §7dieses Kommandos§7.").build());
                 }
             }
         } else {
-            commandSender.sendMessage(new MessageBuilder(Prefix.FRIENDS + "Du kannst diesen Befehl §cnicht §7als Konsole ausführen§8.").build());
+            commandSender.sendMessage(new MessageBuilder($.FRIENDS + "Du kannst diesen Befehl §cnicht §7als Konsole ausführen§7.").build());
         }
     }
 }
